Fix flickering issue on page load

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3501,6 +3501,7 @@ title {
 			position: relative;
 			z-index: 2;
 			display: hidden;
+			-webkit-backface-visibility: hidden;
 		}
 
 			#banner > .inner .image {
